@startuml
skinparam linetype ortho

abstract class Projet {
    titre : varchar[20] {key}
    description : text
    objectif : float
    lancement : date {key}
}

class Incubateur {
    nom: varchar[20] {key}
    création : integer[4]
    budget : float
}

Incubateur "0..1" --> "*" Projet : Soutient

class Projet_Techno {
    innovation : text
}
class Projet_Artis {
    médium : text
}
class Projet_Social {
    région : text
}
class ONG {
    NEU : integer {key}
    nom : varchar[20]
    pays : varchar[20]
}

Projet <|-- Projet_Techno
Projet <|-- Projet_Artis
Projet <|-- Projet_Social
Projet_Social "*" <-- "*" ONG : Soutient

abstract class Personne {
    nom : varchar[20]
    naissance : date
}

class Membre {
    prenom : varchar[20] {key}
    pays : varchar[10]
}

class Contributeur {
    pseudo : varchar[20] {key}
    mail : varchar[20]
}

Personne <|-- Membre
Personne <|-- Contributeur

enum Rôle {
    chef de projet
    développeur
    designer
    community manager
}

class MembreProjet {
    rôle : Rôle
}

Projet "*" <-right- "1..*" Membre : Participe
(Projet, Membre) .. MembreProjet

class Contribution {
    date : datetime {key}
    montant : float
}

class Avis {
    date : date
    note : integer[1..5]
    texte : text
}

note right of (Avis)
    Le contributeur doit 
    avoir contribué pour donner un avis
end note

Contribution "*" <- "1" Contributeur
Projet *-- "*" Contribution

Contributeur "*" <-left- "0..1" Projet : Note
(Contributeur, Projet) . Avis

abstract Contrepartie {
}

class Contrepartie_Numérique {
    format : varchar[10]
    tailleFichier : integer
}

class Contrepartie_Physique {
    poids : float
    fraisLivraison : float
}

class Transporteur {
    nom : varchar[20] {key}
    delai : integer
}

Contribution *-- "0..1" Contrepartie
Contrepartie <|-- Contrepartie_Numérique
Contrepartie <|-- Contrepartie_Physique
Transporteur "1" --> "*" Contrepartie_Physique : Transporte

@enduml